# discord-irc-rs

./: .dockerignore  .gitignore  COPYRIGHT  Cargo.toml  Dockerfile  Dockerfile-ci  README.md  sample.toml
.circleci/: config.yml
.github/workflows/: ci.yml  docker.yml
hooks/: pre-commit
scripts/: lint.sh
src/: config.rs  discord.rs  format.rs  irc.rs  main.rs  utils.rs  webhook.rs
src/format/: irc_to_discord.rs
