[package]
name = "discord-irc"
version = "0.1.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
futures = "0.3.13"
libconfig = { version = "0.11.0", package = "config" }
serde = "1.0.124"
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.25"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1.8.0"

[dependencies.libirc]
package = "irc"
# FIXME: Use original crate when https://github.com/aatxe/irc/pull/236 merged
git = "https://github.com/simnalamburt/irc"
default-features = false
features = ["ctcp", "tls-rust", "toml_config"]

[dependencies.serenity]
version = "0.10.4"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "rustls_backend",
    "utils",
]
