[package]
name = "discord-irc"
version = "1.0.1"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.96"
futures = "0.3.31"
libconfig = { version = "0.15.8", package = "config" }
once_cell = "1.20.3"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
serde = "1.0.218"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
url = "2.5.4"
stopper = "0.2.8"
libirc = { package = "irc", version = "1.0.0", default-features = false, features = ["ctcp", "tls-rust", "toml_config"] }

[dependencies.serenity]
version = "0.11" # TODO: Update to 0.12
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "rustls_backend",
    "utils",
]
